--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,24 +16,27 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+      <!--<h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>-->
+      <h1 class="project-name">Ethan More's Portfolio</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
+      <!--{% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
+      {% endif %}-->
 
+      <section id="pages">
+        {%- for page in site.pages -%}
+          {%- if page.is-toolbar -%}
+          <a href="{{ page.url }}" class="btn">{{ page.title | escape}}</a>&nbsp;
+          {%- endif -%}
+        {%- endfor -%}
+      </section>
     </header>
 
     <main id="content" class="main-content" role="main">
-        <section id="pages">
-            {%- for page in site.pages -%}
-                <a href="{{ page.url }}">{{ page.title | escape}}</a>&nbsp;
-            {%- endfor -%}
-        </section>
 
         {{ content }}
 
@@ -45,4 +48,14 @@
       </footer>
     </main>
   </body>
+
+  <style type="text/css">
+    a.toolbar {
+      color: wheat;
+      background-color: #f44336;
+      padding: 14px 25px;
+      display: inline-block;
+    }
+  </style>
+
 </html>
