--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+
 ---
 
 <h1>Hello!</h1>
@@ -19,7 +20,7 @@ layout: default
   </a>
 </p>
 
-<p>
+<p style="margin-bottom: 100px;">
   Keep scrolling to view my projects in decending order of release.
 </p>
 
@@ -29,18 +30,30 @@ layout: default
   {%- if site.page.list_title -%}
     <h2 class="post-list-heading">{{ page.list_title }}</h2>
   {%- endif -%}
-  <ul class="post-list">
+  <ul class="no-bullets"><!--<ul class="post-list">-->
   {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
   {%- for post in site.posts -%}
     <li>
-        
-      <h3>
+
+      <!--<h3>
         <a class="post-link" href="{{ post.url | relative_url }}">
           {{ post.title | escape }}
         </a>
-      </h3>
-        {{ post.excerpt }}
+      </h3>-->
+        <!--{{ post.excerpt }}-->
+      <a href="{{ post.url | relative_url }}">
+        <h2>{{ post.title }}</h2>
+      <h4 style="margin-top: -10px;">{{ post.year }}</h4>
+        <img style="margin-bottom: 100px;" src="{{ post.image-folder }}{{ post.thumbnail }}">
+      </a>
+      
     </li>
     {%- endfor -%}
   </ul>
 {%- endif -%}
+
+<style type="text/css">
+  .no-bullets, .no-bullets li {
+    list-style-type:none;
+  }
+</style>
