--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
-<h4 style="margin-bottom: -20px;">{{ page.year }}</h4>
+<h4 style="margin-bottom: -20px;">
+  {{ page.year }} &nbsp; {{ page.categories }}
+</h4>
 
 {{ page.content }}
