Finished adding deal toys

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h4 style="margin-bottom: -20px;">
-  {{ page.year }} &nbsp; {{ page.categories }}
+  {{ page.year }} &nbsp; {{ page.category-text }}
 </h4>
 
 {{ page.content }}
